# pyengine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/: pyramid.mtl
pyengine/core/: app.py  asset_manager.py  input_manager.py  logger.py  resource_manager.py  time_manager.py
pyengine/ecs/: entity_manager.py  plugin.py  resource.py  scheduler.py  system.py
pyengine/gl_utils/: mesh.py  obj_loader.py  shader.py  texture.py  vertex_array.py  vertex_buffer.py
pyengine/graphics/: animation_system.py  camera.py  light.py  material.py  mesh_renderer.py  render_system.py  sprite.py
pyengine/gui/: font.py  text_renderer.py  ui_box.py
pyengine/physics/: transform.py
shaders/: mesh.frag  mesh.vert  ui.frag  ui.vert
