[tool.poetry]
name = "pyengine"
version = "0.1.0"
description = ""
authors = ["Ethan Rucar <ethan.rucar@gmail.com>"]
readme = "README.md"
# In older Poetry versions, packages are included by default if they match the name.
# Ensure you have a folder named 'pyengine' with an __init__.py file.

[tool.poetry.dependencies]
# Python version constraint goes here in legacy format
python = ">=3.11"

# Dependencies
pysdl2 = ">=0.9.17,<0.10.0"
pysdl2-dll = ">=2.32.0,<3.0.0"
pyopengl = ">=3.1.10,<4.0.0"
numpy = ">=2.3.5,<3.0.0"
pyglm = ">=2.8.3,<3.0.0"
pillow = ">=12.0.0,<13.0.0"
pywavefront = ">=1.3.3,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
